[package]
name = "luajit2-sys"
description = "LuaJIT-2.1 FFI Bindings"
version = "0.0.1"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
keywords = ["lua", "luajit", "script"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aloucks/luajit2-sys"
links = "luajit"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0.40"
fs_extra = "1.1.0"
